--- a/public/assets/scss/AcrossOceans/style.scss
+++ b/public/assets/scss/AcrossOceans/style.scss
@@ -462,6 +462,7 @@ footer .links-logo .links li a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+      border-bottom: 2px solid #f2b914;
 }
 .text-arrival {
   padding: 20px 0;
